translations_exported/ru/docs_exported/1.17/crafttweaker/docs/vanilla/api/BracketValidators.md
# BracketValidators

## Импорт класса

It might be required for you to import the package if you encounter any issues (like casting an Array), so better be safe than sorry and add the import at the very top of the file.
```zenscript
import crafttweaker.api.BracketValidators;
```


## Static Methods

:::group{name=validateBlockBracket}

Return Type: boolean

```zenscript
BracketValidators.validateBlockBracket(tokens as string) as boolean
```

| Параметр | Тип    | Описание                |
| -------- | ------ | ----------------------- |
| tokens   | string | No Description Provided |


:::

:::group{name=validateBlockMaterialBracket}

Return Type: boolean

```zenscript
BracketValidators.validateBlockMaterialBracket(tokens as string) as boolean
```

| Параметр | Тип    | Описание                |
| -------- | ------ | ----------------------- |
| tokens   | string | No Description Provided |


:::

:::group{name=validateBlockStateMaterialBracket}

Return Type: boolean

```zenscript
BracketValidators.validateBlockStateMaterialBracket(tokens as string) as boolean
```

| Параметр | Тип    | Описание                |
| -------- | ------ | ----------------------- |
| tokens   | string | No Description Provided |


:::

:::group{name=validateEffectBracket}

Return Type: boolean

```zenscript
BracketValidators.validateEffectBracket(tokens as string) as boolean
```

| Параметр | Тип    | Описание                |
| -------- | ------ | ----------------------- |
| tokens   | string | No Description Provided |


:::

:::group{name=validateEnchantment}

Return Type: boolean

```zenscript
BracketValidators.validateEnchantment(tokens as string) as boolean
```

| Параметр | Тип    | Описание                |
| -------- | ------ | ----------------------- |
| tokens   | string | No Description Provided |


:::

:::group{name=validateEntityType}

Return Type: boolean

```zenscript
BracketValidators.validateEntityType(tokens as string) as boolean
```

| Параметр | Тип    | Описание                |
| -------- | ------ | ----------------------- |
| tokens   | string | No Description Provided |


:::

:::group{name=validateItemBracket}

Return Type: boolean

```zenscript
BracketValidators.validateItemBracket(tokens as string) as boolean
```

| Параметр | Тип    | Описание                |
| -------- | ------ | ----------------------- |
| tokens   | string | No Description Provided |


:::

:::group{name=validateItemGroupBracket}

Return Type: boolean

```zenscript
BracketValidators.validateItemGroupBracket(tokens as string) as boolean
```

| Параметр | Тип    | Описание                |
| -------- | ------ | ----------------------- |
| tokens   | string | No Description Provided |


:::

:::group{name=validateProfessionBracket}

Return Type: boolean

```zenscript
BracketValidators.validateProfessionBracket(tokens as string) as boolean
```

| Параметр | Тип    | Описание                |
| -------- | ------ | ----------------------- |
| tokens   | string | No Description Provided |


:::

:::group{name=validateRecipeManagerBracket}

Return Type: boolean

```zenscript
BracketValidators.validateRecipeManagerBracket(tokens as string) as boolean
```

| Параметр | Тип    | Описание                |
| -------- | ------ | ----------------------- |
| tokens   | string | No Description Provided |


:::

:::group{name=validateResourceBracket}

Return Type: boolean

```zenscript
BracketValidators.validateResourceBracket(tokens as string) as boolean
```

| Параметр | Тип    | Описание                |
| -------- | ------ | ----------------------- |
| tokens   | string | No Description Provided |


:::

